<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_display_mim"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.zoro175.tajwid.DisplayMimActivity"
    android:orientation="vertical">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:srcCompat="@mipmap/ic_launcher"
        android:id="@+id/imageView7" />

    <Button
        android:text="@string/izhar_syafawi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/button21"
        android:layout_gravity="center_horizontal" />

    <Button
        android:text="@string/idgham_syafawi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/button22"
        android:layout_gravity="center_horizontal" />

    <Button
        android:text="@string/ikhfa_syafawi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/button23"
        android:layout_gravity="center_horizontal" />

    <Button
        android:text="@string/laman_utama"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/button24"
        android:layout_gravity="center_horizontal" />
</LinearLayout>
